<resources>
    <string name="app_name">Voguely</string>
    <string name="login">Login</string>
    <string name="hey">Hey!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="join">Join Now</string>
    <string name="email">Email</string>
    <string name="terms_conditions_apply"><![CDATA[Terms & Conditions Apply*]]></string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginButtonText">Login</string>
    <string name="signUpButtonText">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_9_99">9.99</string>
    <string name="product_description">Product Description</string>
    <string name="todo">TODO</string>
    <string name="_200_reviews">200 Reviews</string>
    <string name="_4_6">4.6</string>
    <string name="product_image">product image</string>
    <string name="remove">remove</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="total_price">Total Price:</string>
    <string name="buy">buy</string>
    <string name="sign_out">Sign Out</string>
</resources>